Small logic fixes for the future.